Fix some dark mode issues

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,159 +2,6 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import 'main.scss';
 @import 'context-menu.scss';
-
-:root {
-  --dragged-swatch-color: #677087;
-}
-
-[data-theme^='light'],
-[data-theme] [data-theme^='light'] {
-  --alt-color: #677087;
-  --alt-hover-color: #1f2126;
-  --main-color: #f1f1f1;
-  --menu-color: #ffffff;
-}
-
-[data-theme^='dark'],
-[data-theme] [data-theme^='dark'] {
-  --alt-color: #dfdfe0;
-  --alt-hover-color: #c7c7c7;
-  --main-color: #292c32;
-  --menu-color: #383a40;
-}
-
-html,
-body {
-  -webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-  height: 100%;
-  font-family: 'Muli', sans-serif;
-  width: 100%;
-}
-
-* {
-  -ms-overflow-style: none;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-a {
-  @apply cursor-default text-alt;
-  transition: color 0.25s, background-color 0.25s;
-
-  &:hover {
-    @apply cursor-default text-alt-hover;
-  }
-}
-
-button {
-  @apply cursor-default;
-
-  &:focus {
-    outline: none;
-  }
-}
-
-svg {
-  &.icon {
-    g,
-    * {
-      stroke: var(--alt-color) !important;
-      transition: stroke 0.25s;
-    }
-
-    &:hover {
-      g,
-      * {
-        stroke: var(--alt-hover-color) !important;
-      }
-    }
-  }
-}
-
-a:hover svg.icon,
-a:hover svg.icon g,
-a:hover svg.icon *,
-button:hover svg.icon,
-button:hover svg.icon g,
-button:hover svg.icon * {
-  stroke: var(--alt-hover-color) !important;
-}
-
-.custom-arrow.ember-popover-arrow {
-  border: 8px solid transparent;
-}
-
-.ember-popover[x-placement^='bottom'] .custom-arrow {
-  border-bottom-color: white;
-  top: -8px;
-  left: calc(50% - 8px);
-}
-
-.ember-popover[x-placement^='left'] .custom-arrow {
-  border-left-color: white;
-  right: -8px;
-  top: calc(50% - 8px);
-}
-
-.palette-color-squares {
-  .first {
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-  }
-
-  .last {
-    border-bottom-right-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-}
-
-.sortable-item {
-  transition: all 0.125s;
-
-  &.is-dragging {
-    transition-duration: 0s;
-  }
-}
-
-.dragSortList.-isExpanded.-isDraggingOver:before,
-.dragSortItem.-placeholderBefore:before,
-.dragSortItem.-placeholderAfter:before {
-  content: '';
-  display: inline-block;
-  height: 100%;
-  width: 5px;
-}
-
-.dragSortItem.-placeholderBefore:before {
-  border-left: 5px solid var(--dragged-swatch-color);
-}
-
-.dragSortItem.-placeholderAfter:before {
-  border-right: 5px solid var(--dragged-swatch-color);
-}
-
-.dragSortList.-horizontal .dragSortItem.-placeholderBefore,
-.dragSortList.-horizontal.-rtl .dragSortItem.-placeholderAfter {
-  padding: 0 0 0 5px;
-}
-
-.dragSortList.-horizontal .dragSortItem.-placeholderAfter,
-.dragSortList.-horizontal.-rtl .dragSortItem.-placeholderBefore {
-  padding: 0 5px 0 0;
-}
-
-.color-history-list {
-  .dragSortList.-isExpanded.-isDraggingOver:before,
-  .dragSortItem.-placeholderBefore:before,
-  .dragSortItem.-placeholderAfter:before {
-    display: none;
-  }
-
-  .dragSortItem.-isDragged {
-    display: block;
-  }
-}
+@import 'drag-sort.scss';
